AB#336431: Removed the code changes for new overlapping badge issue

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/card/recommendations-card/recommendations-card.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/card/recommendations-card/recommendations-card.scss
@@ -11,7 +11,6 @@
   flex-direction: column;
   position: relative;
   box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.1);
-  margin-top: 3rem;
   margin-bottom: 6rem;
   @include card-width;
   
